--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML Images</title>
+    <img
+  src="https://a-z-animals.com/media/2022/09/iStock-492611032.jpg"
+  alt="LION"
+  title="We're here to help you!"
   </head>
   <body>
     <!-- Your code here -->
